--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "buildCommand": "npm run build",
   "builds": [
     { "src": "server.js", "use": "@vercel/node" },
     { "src": "dist/client/**", "use": "@vercel/static" }
