Update Vercel configuration to include all dist files

--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,10 @@
   "version": 2,
   "builds": [
     { "src": "server.js", "use": "@vercel/node" },
-    { "src": "dist/client/**", "use": "@vercel/static" }
+    { "src": "dist/**", "use": "@vercel/static" }
   ],
   "routes": [
+    { "handle": "filesystem" },
     { "src": "/(.*)", "dest": "server.js" }
   ]
 }
